--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
     </p>
   </div>
 
-  <form>
+  <form id="form">
     <div class="line"><span class="num">1.</span><input type="text" class="hl" id="h1" required autofocus placeholder="Who Else Wants a Killer Robot?"  name="h1"/><span class="count">0</span></p>
     <div class="line"><span class="num">2.</span><input type="text" class="hl" id="h2" required  placeholder="The Secret of Giant Pandas"  name="h2"/><span class="count">0</span></p>
     <div class="line"><span class="num">3.</span><input type="text" class="hl" id="h3" required  placeholder="Here is a Method That is Helping Bros to Recover"  name="h3"/><span class="count">0</span></p>
@@ -70,9 +70,9 @@
     <div class="line"><span class="num">25.</span><input type="text" class="hl" id="h25" required  placeholder="This Video is Super Gross"  name="h25"/><span class="count">0</span></p>
 
   <!-- this button should go to a PH style voting interface so you can let colleagues help you pick a headline.-->
-  <input type="submit" class="feedback" value="Help me pick a headline">
+  <!--<input type="submit" class="feedback" value="Help me pick a headline">-->
 
-  <!-- <input type="submit" class="feedback" value="get feedback"> <input type="reset" class="reset" value="clear all">-->
+  <!--<input type="submit" class="feedback" value="get feedback">--><a id="reset" class="reset">clear all &amp; start over</a>
   </form>
 
 
@@ -84,6 +84,7 @@
   <!-- JaVAVAVAVAVascript -->
   <script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
   <script src="//cdnjs.cloudflare.com/ajax/libs/underscore.js/1.7.0/underscore-min.js"></script>
+  <!--<script src="//cdnjs.cloudflare.com/ajax/libs/localforage/1.1.1/localforage.min.js"></script> --> <!--<script="//cdnjs.cloudflare.com/ajax/libs/jquery-serialize-object/2.0.0/jquery.serialize-object.compiled.js"></script>-->
   <script src="js/script.js"></script>
 </body>
 </html>
