new placeholder text

--- a/index.html
+++ b/index.html
@@ -10,7 +10,6 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link href='http://fonts.googleapis.com/css?family=Oswald:400|Lato:500' rel='stylesheet' type='text/css'>
   <link rel="stylesheet" href="css/styles.css">
-  <link href="//maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css" rel="stylesheet">
 
   <!--[if lt IE 9]>
     <script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script>
@@ -19,8 +18,8 @@
 
 <body>
   <h1>25 <span id="contentType">Headlines</span></h1>
-  <h3>Be creative and get more clicks.</h3>
-  <p>Inspired by <a href="http://www.slideshare.net/Upworthy/upworthy-10-ways-to-win-the-internets" target="_blank" title="Adam is one of the Upworthy guys, duh.">Upworthy</a> &amp; <a href="https://blog.kissmetrics.com/ultimate-home-page-headline/" target="_blank" title="KISSmetrics runs an excellent blog">KissMetrics</a> &middot; Made by <a href="http://nealshyam.com" target="_blank" title="Neal Shyam is an awesome dude!">Neal</a></p>
+  <h3>Be creative and get more clicks</h3>
+  <p>Inspired by <a href="http://www.slideshare.net/Upworthy/upworthy-10-ways-to-win-the-internets" target="_blank" title="Adam is one of the Upworthy guys, duh.">Upworthy</a> &amp; <a href="https://blog.kissmetrics.com/ultimate-home-page-headline/" target="_blank" title="KISSmetrics runs an excellent blog">KissMetrics</a>.</p>
 
   <div id="selectors">
     <h4>
@@ -41,33 +40,33 @@
   <form id="form">
     <div class="line"><span class="num">1.</span><input type="text" class="hl" id="h1" required autofocus placeholder="Who Else Wants a Killer Robot?"  name="h1"/><span class="count">0</span></p>
     <div class="line"><span class="num">2.</span><input type="text" class="hl" id="h2" required  placeholder="The Secret of Giant Pandas"  name="h2"/><span class="count">0</span></p>
-    <div class="line"><span class="num">3.</span><input type="text" class="hl" id="h3" required  placeholder="Here is a Method That is Helping Bros to Recover"  name="h3"/><span class="count">0</span></p>
+    <div class="line"><span class="num">3.</span><input type="text" class="hl" id="h3" required  placeholder="Here's the Miracle That's Helping Bros Live Longer"  name="h3"/><span class="count">0</span></p>
     <div class="line"><span class="num">4.</span><input type="text" class="hl" id="h4" required  placeholder="Little Known Ways to Nurse Your Cat"  name="h4"/><span class="count">0</span></p>
-    <div class="line"><span class="num">5.</span><input type="text" class="hl" id="h5" required  placeholder="Get Rid of Maroon 5 Once and For All"  name="h5"/><span class="count">0</span></p>
+    <div class="line"><span class="num">5.</span><input type="text" class="hl" id="h5" required  placeholder="Now You Can Have a Great Body Without Paying Too Much"  name="h5"/><span class="count">0</span></p>
 
-    <div class="line"><span class="num">6.</span><input type="text" class="hl" id="h6" required  placeholder="Here’s a Quick Way to World Bono"  name="h6"/><span class="count">0</span></p>
-    <div class="line"><span class="num">7.</span><input type="text" class="hl" id="h7" required  placeholder="Now You Can Have a Great Body Without Paying Too Much"  name="h7"/><span class="count">0</span></p>
-    <div class="line"><span class="num">8.</span><input type="text" class="hl" id="h8" required  placeholder="Crush Watermelons like Gallagher"  name="h8"/><span class="count">0</span></p>
-    <div class="line"><span class="num">9.</span><input type="text" class="hl" id="h9" required  placeholder="Buy a Yacht You Can Be Proud Of"  name="h9"/><span class="count">0</span></p>
-    <div class="line"><span class="num">10.</span><input type="text" class="hl" id="h10" required  placeholder="What Everybody Ought to Know About Spiders"  name="h10"/><span class="count">0</span></p>
+    <div class="line"><span class="num">6.</span><input type="text" class="hl" id="h6" required  placeholder="Annihilate Watermelons Like Gallagher"  name="h6"/><span class="count">0</span></p>
+    <div class="line"><span class="num">7.</span><input type="text" class="hl" id="h7" required  placeholder="Own the Yacht Your Neighbors Dream About"  name="h7"/><span class="count">0</span></p>
+    <div class="line"><span class="num">8.</span><input type="text" class="hl" id="h8" required  placeholder="What Everybody Ought to Know About Spiders"  name="h8"/><span class="count">0</span></p>
+    <div class="line"><span class="num">9.</span><input type="text" class="hl" id="h9" required  placeholder="100 Ways to Style Butter"  name="h9"/><span class="count">0</span></p>
+    <div class="line"><span class="num">10.</span><input type="text" class="hl" id="h10" required  placeholder="He Took the Road Less Traveled &mdash; You'll Never Guess What Happened Next"  name="h10"/><span class="count">0</span></p>
 
-    <div class="line"><span class="num">11.</span><input type="text" class="hl" id="h11" required  placeholder="100 Ways to Cook Butter"  name="h11"/><span class="count">0</span></p>
-    <div class="line"><span class="num">12.</span><input type="text" class="hl" id="h12" required  placeholder="He Took the Road Less Traveled - You'll Never Guess What Happended Next"  name="h12"/><span class="count">0</span></p>
-    <div class="line"><span class="num">13.</span><input type="text" class="hl" id="h13" required  placeholder="You'll Never Beleive This Etymology Professor's Last Name"  name="h13"/><span class="count">0</span></p>
-    <div class="line"><span class="num">14.</span><input type="text" class="hl" id="h14" required  placeholder="sdf"  name="h14"/><span class="count">0</span></p>
-    <div class="line"><span class="num">15.</span><input type="text" class="hl" id="h15" required  placeholder="sdf"  name="h15"/><span class="count">0</span></p>
+    <div class="line"><span class="num">11.</span><input type="text" class="hl" id="h11" required  placeholder="How to Get Rid of Stubborn Bonos"  name="h11"/><span class="count">0</span></p>
+    <div class="line"><span class="num">12.</span><input type="text" class="hl" id="h12" required  placeholder="Fewer Zombies in 7 Days or Your Money Back!"  name="h12"/><span class="count">0</span></p>
+    <div class="line"><span class="num">13.</span><input type="text" class="hl" id="h13" required  placeholder="Now You Can Win Hackathons Even If You Don't Know Node.js"  name="h13"/><span class="count">0</span></p>
+    <div class="line"><span class="num">14.</span><input type="text" class="hl" id="h14" required  placeholder="How to Shop at Ikea Without Murdering Your Spouse"  name="h14"/><span class="count">0</span></p>
+    <div class="line"><span class="num">15.</span><input type="text" class="hl" id="h15" required  placeholder="684,935 Bedbugs Agree, Your Apartment Is Infested"  name="h15"/><span class="count">0</span></p>
 
-    <div class="line"><span class="num">16.</span><input type="text" class="hl" id="h16" required  placeholder="sdf"  name="h16"/><span class="count">0</span></p>
-    <div class="line"><span class="num">17.</span><input type="text" class="hl" id="h17" required  placeholder="sdf"  name="h17"/><span class="count">0</span></p>
-    <div class="line"><span class="num">18.</span><input type="text" class="hl" id="h18" required  placeholder="sdf"  name="h18"/><span class="count">0</span></p>
-    <div class="line"><span class="num">19.</span><input type="text" class="hl" id="h19" required  placeholder="sdf"  name="h19"/><span class="count">0</span></p>
-    <div class="line"><span class="num">20.</span><input type="text" class="hl" id="h20" required  placeholder="sdf"  name="h20"/><span class="count">0</span></p>
+    <div class="line"><span class="num">16.</span><input type="text" class="hl" id="h16" required  placeholder="25 Reasons Why Manhattan Is Man-Has-Been"  name="h16"/><span class="count">0</span></p>
+    <div class="line"><span class="num">17.</span><input type="text" class="hl" id="h17" required  placeholder="Why SEO Gives marketers aneurysms"  name="h17"/><span class="count">0</span></p>
+    <div class="line"><span class="num">18.</span><input type="text" class="hl" id="h18" required  placeholder="The Ultimate Twerking Compilation Video"  name="h18"/><span class="count">0</span></p>
+    <div class="line"><span class="num">19.</span><input type="text" class="hl" id="h19" required  placeholder="The Brilliant, Super Fast Way to Shotgun a Beer"  name="h19"/><span class="count">0</span></p>
+    <div class="line"><span class="num">20.</span><input type="text" class="hl" id="h20" required  placeholder="Rage Spend like a Jilted Kardashian"  name="h20"/><span class="count">0</span></p>
 
-    <div class="line"><span class="num">21.</span><input type="text" class="hl" id="h21" required  placeholder="sdf"  name="h21"/><span class="count">0</span></p>
-    <div class="line"><span class="num">22.</span><input type="text" class="hl" id="h22" required  placeholder="sdf"  name="h22"/><span class="count">0</span></p>
-    <div class="line"><span class="num">23.</span><input type="text" class="hl" id="h23" required  placeholder="sdf"  name="h23"/><span class="count">0</span></p>
-    <div class="line"><span class="num">24.</span><input type="text" class="hl" id="h24" required  placeholder="sdf"  name="h24"/><span class="count">0</span></p>
-    <div class="line"><span class="num">25.</span><input type="text" class="hl" id="h25" required  placeholder="This Video is Super Gross"  name="h25"/><span class="count">0</span></p>
+    <div class="line"><span class="num">21.</span><input type="text" class="hl" id="h21" required  placeholder="The future of Sharks Is Here"  name="h21"/><span class="count">0</span></p>
+    <div class="line"><span class="num">22.</span><input type="text" class="hl" id="h22" required  placeholder="Nebraska Just Got Exciting"  name="h22"/><span class="count">0</span></p>
+    <div class="line"><span class="num">23.</span><input type="text" class="hl" id="h23" required  placeholder="5 Lies Your Friends Tell You Everyday"  name="h23"/><span class="count">0</span></p>
+    <div class="line"><span class="num">24.</span><input type="text" class="hl" id="h24" required  placeholder="The Programming Language That RMS Actually Likes"  name="h24"/><span class="count">0</span></p>
+    <div class="line"><span class="num">25.</span><input type="text" class="hl" id="h25" required  placeholder="Avoid Embarrassment: Learn How to Turn down for What"  name="h25"/><span class="count">0</span></p>
 
   <!-- this button should go to a PH style voting interface so you can let colleagues help you pick a headline.-->
   <!--<input type="submit" class="feedback" value="Help me pick a headline">-->
@@ -78,13 +77,12 @@
 
 <!--<p>Placeholders via <a href="http://www.copyblogger.com/10-sure-fire-headline-formulas-that-work/" target="_blank" title="copyblogger is pretty cool">copyblogger</a>. Capitalization by <a href="https://github.com/gouch" target="_blank" title="David Gouch lives in Asheville, NC.">David Gouch</a>.</p>-->
 
-<p>&copy; 2014 &middot; Neal Shyam</p>
+<p>&copy; 2014 &middot; <a href="http://nealshyam.com" target="_blank" title="Neal Shyam is an awesome dude!">Neal Shyam</a></p>
 
 
   <!-- JaVAVAVAVAVascript -->
   <script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
   <script src="//cdnjs.cloudflare.com/ajax/libs/underscore.js/1.7.0/underscore-min.js"></script>
-  <!--<script src="//cdnjs.cloudflare.com/ajax/libs/localforage/1.1.1/localforage.min.js"></script> --> <!--<script="//cdnjs.cloudflare.com/ajax/libs/jquery-serialize-object/2.0.0/jquery.serialize-object.compiled.js"></script>-->
   <script src="js/script.js"></script>
 </body>
 </html>
