--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8">
 
-  <title>25 Headlines &middot; Get more clicks by excercising your imagination</title>
+  <title>25 Headlines &middot; Be creative &amp; get more clicks</title>
   <meta name="description" content="Write better headlines &amp; get more clicks.">
   <meta name="author" content="Neal Shyam">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -19,6 +19,13 @@
 <body>
   <h1>25 <span id="contentType">Headlines</span></h1>
   <h3>Be creative and get more clicks</h3>
+  <!--<p style="margin-top:0; margin-bottom:0;">
+    <iframe src="http://ghbtns.com/github-btn.html?user=nealrs&repo=25Headlines&type=watch&count=true"
+    allowtransparency="true" frameborder="0" scrolling="0" width="110" height="20"></iframe>
+    <a href="https://twitter.com/share" class="twitter-share-button" data-related="nealrs" data-dnt="true">Tweet</a>
+    <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+'://platform.twitter.com/widgets.js';fjs.parentNode.insertBefore(js,fjs);}}(document, 'script', 'twitter-wjs');</script>
+  </p>-->
+
   <p>Inspired by <a href="http://www.slideshare.net/Upworthy/upworthy-10-ways-to-win-the-internets" target="_blank" title="Adam is one of the Upworthy guys, duh.">Upworthy</a> &amp; <a href="https://blog.kissmetrics.com/ultimate-home-page-headline/" target="_blank" title="KISSmetrics runs an excellent blog">KissMetrics</a>.</p>
 
   <div id="selectors">
@@ -74,10 +81,7 @@
   <!--<input type="submit" class="feedback" value="get feedback">--><a id="reset" class="reset">clear all &amp; start over</a>
   </form>
 
-
-<!--<p>Placeholders via <a href="http://www.copyblogger.com/10-sure-fire-headline-formulas-that-work/" target="_blank" title="copyblogger is pretty cool">copyblogger</a>. Capitalization by <a href="https://github.com/gouch" target="_blank" title="David Gouch lives in Asheville, NC.">David Gouch</a>.</p>-->
-
-<p>&copy; 2014 &middot; <a href="http://nealshyam.com" target="_blank" title="Neal Shyam is an awesome dude!">Neal Shyam</a></p>
+  <p>&copy; 2014 &middot; <a href="http://nealshyam.com" target="_blank" title="Neal Shyam is an awesome dude!">Neal Shyam</a></p>
 
 
   <!-- JaVAVAVAVAVascript -->
