add download button + no more pills

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8">
 
-  <title>25 Headlines &middot; Be creative &amp; get more clicks</title>
+  <title>25 Headlines &middot; If you want more clicks, you have to excercise your brain</title>
   <meta name="description" content="Write better headlines &amp; get more clicks.">
   <meta name="author" content="Neal Shyam">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -18,7 +18,8 @@
 
 <body>
   <h1>25 <span id="contentType">Headlines</span></h1>
-  <h3>Be creative and get more clicks</h3>
+  <h3 id="teaser"></h3>
+
   <!--<p style="margin-top:0; margin-bottom:0;">
     <iframe src="http://ghbtns.com/github-btn.html?user=nealrs&repo=25Headlines&type=watch&count=true"
     allowtransparency="true" frameborder="0" scrolling="0" width="110" height="20"></iframe>
@@ -38,9 +39,9 @@
 
   <div>
     <p>
-      <span class="length"><span id="len1" class="len leny">50</span> eh, ok.</span>
-      <span class="length"><span id="len2" class="len leno">62</span> too long.</span>
-      <span class="length"><span id="len3" class="len lenr">100</span> whoa nelly!</span>
+      <span class="length"><span id="len1" class="len leny">50</span> Eh, ok</span> &nbsp;
+      <span class="length"><span id="len2" class="len leno">62</span> Long</span> &nbsp;
+      <span class="length"><span id="len3" class="len lenr">100</span> No way</span>
     </p>
   </div>
 
@@ -78,7 +79,8 @@
   <!-- this button should go to a PH style voting interface so you can let colleagues help you pick a headline.-->
   <!--<input type="submit" class="feedback" value="Help me pick a headline">-->
 
-  <!--<input type="submit" class="feedback" value="get feedback">--><a id="reset" class="reset">clear all &amp; start over</a>
+  <!--<input type="submit" class="feedback" value="get feedback">--><a id="reset" class="reset">clear &amp; start over</a>
+  <a id="download" class="download">download</a>
   </form>
 
   <p>&copy; 2014 &middot; <a href="http://nealshyam.com" target="_blank" title="Neal Shyam is an awesome dude!">Neal Shyam</a></p>
