--- a/index.html
+++ b/index.html
@@ -14,6 +14,26 @@
   <!--[if lt IE 9]>
     <script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script>
   <![endif]-->
+
+  <!-- Twitter Card data -->
+  <meta name="twitter:card" content="summary">
+  <meta name="twitter:site" content="@nealrs">
+  <meta name="twitter:title" content="25 Headlines">
+  <meta name="twitter:description" content="Write better headlines &amp; get more clicks.">
+  <meta name="twitter:creator" content="@nealrs">
+  <-- Twitter Summary card images must be at least 120x120px -->
+  <meta name="twitter:image" content="https://raw.githubusercontent.com/nealrs/25Headlines/gh-pages/img/25Headlines.png">
+
+  <!-- Open Graph data -->
+  <meta property="og:title" content="25 Headlines" />
+  <meta property="og:type" content="article" />
+  <meta property="og:url" content="http://nealrs.github.io/25Headlines/" />
+  <meta property="og:image" content="https://raw.githubusercontent.com/nealrs/25Headlines/gh-pages/img/25Headlines.png" />
+  <meta property="og:description" content="If you want more clicks, you have to excercise your brain." />
+  <meta property="og:site_name" content="25 Headlines" />
+  <!--<meta property="fb:admins" content="Facebook numeric ID" />-->
+
+
 </head>
 
 <body>
