twitter card switcheroo

--- a/index.html
+++ b/index.html
@@ -16,12 +16,13 @@
   <![endif]-->
 
   <!-- Twitter Card data -->
-  <meta name="twitter:card" content="summary">
+  <meta name="twitter:card" content="summary_large_image">
   <meta name="twitter:site" content="@nealrs">
+  <meta name="twitter:creator" content="@nealrs">
   <meta name="twitter:title" content="25 Headlines">
   <meta name="twitter:description" content="Write better headlines &amp; get more clicks.">
-  <meta name="twitter:creator" content="@nealrs">
-  <meta name="twitter:image" content="https://raw.githubusercontent.com/nealrs/25Headlines/gh-pages/img/25Headlines.png">
+
+  <meta name="twitter:image:src" content="https://raw.githubusercontent.com/nealrs/25Headlines/gh-pages/img/25Headlines.png">
 
   <!-- Open Graph data -->
   <meta property="og:title" content="25 Headlines" />
