--- a/index.html
+++ b/index.html
@@ -99,8 +99,11 @@
   <!-- this button should go to a PH style voting interface so you can let colleagues help you pick a headline.-->
   <!--<input type="submit" class="feedback" value="Help me pick a headline">-->
 
-  <!--<input type="submit" class="feedback" value="get feedback">--><a id="reset" class="reset">clear &amp; start over</a>
-  <a id="download" class="download">download</a>
+  <!--<input type="submit" class="feedback" value="get feedback">-->
+  <h4>
+    <a id="reset" class="reset">clear &amp; start over</a>
+    <a id="download" class="download">download</a>
+  </h4>
   </form>
 
   <p>&copy; 2014 &middot; <a href="http://nealshyam.com" target="_blank" title="Neal Shyam is an awesome dude!">Neal Shyam</a></p>
